Began exploring the plugin, added first export field - refs #21329